Archive2/7e/3fde7fd5fa0f8f/output
main.cpp: In function 'int main()':
main.cpp:17:5: error: 'LargeInt' was not declared in this scope
     LargeInt solution = 0;
     ^
main.cpp:17:14: error: expected ';' before 'solution'
     LargeInt solution = 0;
              ^
main.cpp:19:9: error: 'solution' was not declared in this scope
         solution += phi(n);
         ^
main.cpp:21:5: error: 'cout' is not a member of 'std'
     std::cout << "Solution: " << solution << std::endl;
     ^
main.cpp:21:34: error: 'solution' was not declared in this scope
     std::cout << "Solution: " << solution << std::endl;
                                  ^
main.cpp:21:46: error: 'endl' is not a member of 'std'
     std::cout << "Solution: " << solution << std::endl;
                                              ^
